Seting Force Field to None on an Empty Object sets the display type to Plain Axis #113460

Closed
opened 2023-10-09 21:57:30 +02:00 by Taiseibutsu · 2 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.13

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-09 15:02, hash: f54205cfdd11

Short description of error
Seting Force Field to None on an Empty Object sets the display type to Axis

Exact steps for others to reproduce the error

  • Add an empty to the scene different from empty. If not change the display type to a different one from Plain Axis.
  • Add a Force field
  • Set Force Field to None.
    [Now the display type have been set to Plain Axis]

Imagine you have image empties with force fields or added by mistake. Now you want the force field to be "deleted".
The empty will set it's display type to Plain Axis.

I think this behaviour is not desired

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.13 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-09 15:02, hash: `f54205cfdd11` **Short description of error** Seting Force Field to None on an Empty Object sets the display type to Axis **Exact steps for others to reproduce the error** - Add an empty to the scene different from empty. If not change the display type to a different one from Plain Axis. - Add a Force field - Set Force Field to None. [Now the display type have been set to Plain Axis] Imagine you have image empties with force fields or added by mistake. Now you want the force field to be "deleted". The empty will set it's display type to Plain Axis. I think this behaviour is not desired
Taiseibutsu added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-09 21:57:31 +02:00
Member

Hi, thanks for the report. This is not a bug. Empty overlay is changed to plain-axes when type is other than wind and vortex, see:
https://projects.blender.org/blender/blender/src/branch/main/source/blender/makesrna/intern/rna_object_force.cc#L700

Hi, thanks for the report. This is not a bug. Empty overlay is changed to `plain-axes` when type is other than wind and vortex, see: https://projects.blender.org/blender/blender/src/branch/main/source/blender/makesrna/intern/rna_object_force.cc#L700
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2023-10-10 06:00:43 +02:00
Member

Though there is inconsistency, If force field is added on empty, empty-drawtype is not changed unless we change the force type.
For consistency:

  • Either we could draw plain axis when fresh "force field" is added on empty: forcefield_toggle_exec
  • Or not change the empty-drawtype if object type is empty
Though there is inconsistency, If force field is added on empty, empty-drawtype is not changed unless we change the force type. For consistency: - Either we could draw plain axis when fresh "force field" is added on empty: `forcefield_toggle_exec` - Or not change the empty-drawtype if object type is empty
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-10-10 06:20:37 +02:00
Pratik Borhade added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-10-10 06:20:55 +02:00
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-10-10 15:25:23 +02:00
Pratik Borhade added
Status
Resolved
and removed
Status
Archived
labels 2023-10-10 15:25:32 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113460
No description provided.