Update drawtype when forcefield is added to empty object

For consistency, change drawtype of empty when forcefield is added to
fresh empty object.
Found this while checking #113460

How to Replicate:
- Open default scene, delete everything
- Shift + A -> Empty -> Empty Cube
- Toggle forecefield from physics panel (notice empty overlay is same)
- By default, field type is "force". Select this field type from list
- Now the empty drawing has changed